[ignore] small optimization: use valueOf instead of calling constructor
svn path=/trunk/eXist/; revision=13144