@@ -44,7 +44,7 @@ public class Object2IntHashMapTest extends
 	}
 
 	protected Integer keyEquiv_newObject(int k) {
-		return new Integer(k);
+		return Integer.valueOf(k);
 	}
 
 	protected int keyEquiv(Object k) {
