@@ -49,7 +49,7 @@ public class Object2LongHashMapTest extends
 	}
 
 	protected Integer keyEquiv_newObject(int k) {
-		return new Integer(k);
+		return Integer.valueOf(k);
 	}
 
 	protected int keyEquiv(Object k) {
