@@ -43,7 +43,7 @@ public class SequencedLongHashMapTest extends AbstractHashtableTest<SequencedLon
 	}
 
 	protected Long keyEquiv_newObject(int k) {
-		return new Long(k);
+		return Long.valueOf(k);
 	}
 
 	protected int keyEquiv(Long k) {
